Fix(style) Auto-overflow on modals. UD-46

--- a/src/styles/components/uniModal/__uniModal.sass
+++ b/src/styles/components/uniModal/__uniModal.sass
@@ -68,7 +68,8 @@ dialog.uniModal
         box-sizing: border-box
         border-radius: pxToRem(5)
         max-height: 90vh
-        overflow: visible
+        overflow-y: visible
+        overflow-x: auto
         @include clearfix
 
         @media(small)
